<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_login"

    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#ffff"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="100dp"

        >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:background="#fffa"
            android:src="@drawable/redhat"
            android:contentDescription="@string/todo" />

        <EditText
            android:id="@+id/txt_correo"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:padding="10dp"
            android:hint="@string/txt_email"
            android:maxLength="100"
            android:background="@drawable/edit_box"
            android:layout_margin="15dp"
            android:drawableStart="@drawable/ic_baseline_email_24"
            android:inputType="textEmailAddress"
            android:autofillHints="" />

        <EditText
            android:id="@+id/txt_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/txt_pass"
            android:padding="10dp"
            android:maxLength="50"
            android:layout_margin="15dp"
            android:background="@drawable/edit_box"
            android:drawableStart="@drawable/ic_baseline_lock_24"
            android:inputType="textPassword"
            android:autofillHints="" />

        <TextView
            android:id="@+id/txt_registro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_registrate"
            android:textColor="#0E00FF"
            android:textStyle="italic"
            android:gravity="center|bottom" />

        <CheckBox
            android:id="@+id/chk_recordar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/chk_recordar"
            android:layout_margin="20dp"

            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_ingresar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="10dp"
                android:text="@string/btn_ingresar"
                android:textAllCaps="false"

                />

            <Button
                android:id="@+id/btn_regresar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="10dp"
                android:text="@string/btn_salir"
                android:textAllCaps="false"

                />

        </LinearLayout>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>